# Contacts

./: alembic.ini  docker-compose.yaml  pyproject.toml
src/contacts/: main.py
src/contacts/api/: auth.py  contacts.py  router.py  users.py
src/contacts/api/dependencies/: api.py  db.py
src/contacts/core/: events.py  logger.py  settings.py
src/contacts/db/: events.py
src/contacts/db/crud/: contacts.py  users.py
src/contacts/db/migrations/: env.py
src/contacts/db/migrations/versions/: 1515a1af105c_initial_tables.py  31d898a30a7f_users_contacts_tables.py  909fe04668b4_initial_tables.py
src/contacts/helpers/: auth.py  contacts.py  security.py
src/contacts/models/db/: entities.py  metaclasses.py  tables.py
src/contacts/models/schemas/: auth.py  contacts.py  meta.py  users.py
src/contacts/resources/errors/: auth.py  contacts.py  users.py
tests/: conftest.py  model_generator.py
tests/test_api/: test_contacts.py  test_users.py
tests/test_crud/: test_contacts.py  test_users.py
tests/test_utils/: test_helpers.py
