[tool.poetry]
name = "contacts"
version = "0.1.0"
description = ""
authors = ["Alexander <alexandr.s.trushnikov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.88.0"}
jwt = "^1.3.1"
loguru = "^0.6.0"
SQLAlchemy = "^1.4.45"
alembic = "^1.9.0"
asyncpg = "^0.27.0"
psycopg2-binary = "^2.9.5"
bcrypt = "^4.0.1"
PyJWT = "^2.6.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
